--- a/astree/template/astree/createRule.html
+++ b/astree/template/astree/createRule.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block title %}Create Rules{% endblock %}
+{% block createActive %}active{% endblock %}
 {% block body %}
 
 <h1 class="text-center">Create a Rule</h1>
