--- a/astree/template/astree/base.html
+++ b/astree/template/astree/base.html
@@ -15,7 +15,7 @@
 <body style="font-family: 'Times New Roman', Times, serif;">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Zeotap</a>
+            <a class="navbar-brand" href="/">AST Rules</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -24,19 +24,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link {% block homeActive %}{% endblock %}" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'astree:create_rule' %}">Create
+                        <a class="nav-link {% block createActive %}{% endblock %}" aria-current="page" href="{% url 'astree:create_rule' %}">Create
                             Rule</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'astree:evaluate_rule' %}">Evaluate
+                        <a class="nav-link {% block evaluateActive %}{% endblock %}" aria-current="page" href="{% url 'astree:evaluate_rule' %}">Evaluate
                             Rule</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'astree:all_rules' %}">All
-                            Rules</a>
                     </li>
                 </ul>
                 <form class="d-flex">
